# nito-wallet-mobile

./: .gitattributes  .gitignore  App.tsx  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  LICENSE  NOTICE.md  PRIVACY.md  README.md  SECURITY.md  TRADEMARKS.md  app.config.js  eas.json  eslint.config.cjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  (+2 more)
docs/: QUALITY.md  RELEASE.md
native/: NitoWalletCrypto.podspec
native/nito-wallet-crypto/: Cargo.toml
native/nito-wallet-crypto/include/: nito_wallet_crypto.h
native/nito-wallet-crypto/src/: lib.rs
patches/: @react-native+codegen+0.86.0.patch  expo++@expo+log-box+57.0.1.patch  expo+57.0.7.patch  expo-constants+57.0.6.patch  expo-file-system+57.0.1.patch  expo-modules-core+57.0.6.patch  expo-modules-jsi+57.0.3.patch  expo-splash-screen+57.0.4.patch  react-native+0.86.0.patch  react-native-get-random-values+1.11.0.patch  react-native-safe-area-context+5.7.0.patch
plugins/: withNitoAndroidBuildPolicy.cjs  withNitoAndroidLintFixes.cjs  withNitoWalletCrypto.cjs
scripts/: assert-ios-owned-warning-free.mjs  assert-no-warning-suppressions.mjs  assert-warning-free.mjs  download-eas-artifacts.mjs  ensure-rust-toolchains.mjs  patch-android-splash-resources.mjs  patch-ios-zxing.mjs  prebuild-ios-free.mjs  prepare-ios-build-phases.rb  release-version.mjs  sync-release-version.mjs
src/: app-security.audit.test.ts  i18n.audit.test.ts  i18n.complete.ts  i18n.consolidation.ts  i18n.ts
(+36 files in other folders)
