[package]
name = "nito-wallet-crypto"
version = "1.1.3"
edition = "2024"
license = "MIT"
publish = false

[lib]
name = "nito_wallet_crypto"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
base64 = "0.22.1"
bip39 = { version = "2.2.0", features = ["zeroize"] }
bitcoin = { version = "0.32.7", features = ["base64", "serde"] }
hex = "0.4.3"
pbkdf2 = "0.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
zeroize = "1.8.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"
